# dlwrapper

./: .clang-format  .gitignore  README.md  bandwidth_with_torch.py  bandwith_with_torch.py  develop.sh  env.sh  main.py  setup.py
plugin/: CHANGELOG.md  CMakeLists.txt  Makefile  pyproject.toml  setup.py
plugin/ffi/: export.cpp  ffi.h  ffi_cuda_native.cpp  ffi_nico.cpp  ffi_tensor.cpp
plugin/include/: common.h  device_manager.h  fast_unpickler.h  host_manager.h  lazy_unpickler.h  mem_handle_manager.h  misc.h  model_manager.h  nico.h  nv_common.h  tensor.h  work_status.h
plugin/include/cuda/: cuda_kernels.cuh  cuda_kernels.h  cuda_ops.h  cuda_torch_api.h  torch_helper.h
plugin/nico/: __init__.py
plugin/python/dlwrapper/: ffi.py
plugin/src/: comm_ops.cpp  cuda_plugins.cpp  device_manager.cpp  export.cpp  fast_unpickler.cpp  host_manager.cpp  lazy_unpickler.cpp  mem_handle_manager.cpp  model_manager.cpp  nico.cpp  tensor.cpp  unit_test.cpp
plugin/src/cuda/: grid_sampler.cu  torch_interface.cpp
plugin/standalone/: modelstat.cpp
plugin/test/: grid_sample.py  model.py  move.py
